@@ -1,4 +1,8 @@
-﻿shmuel 18.09.2015 12:29:10 +0200 - build 526
+﻿shmuel 18.09.2015 13:00:27 +0200 - build 527
+
+1. Уточнение 526.
+
+shmuel 18.09.2015 12:29:10 +0200 - build 526
 
 1. LuaFAR: M#2384: Нужна глобальная таблица guid'ов диалогов фара.
    --> Таблица far.Guids.
